force-app/main/default/objects/Module__c/fields/ModuleUserUnit__c.field-meta.xml
<CustomField>
    <fullName>ModuleUserUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ModuleUserUnit</label>
    <referenceTo>UserUnit__c</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <type>Lookup</type>
</CustomField>