force-app/main/default/objects/Module__c/fields/TotalTime__c.field-meta.xml
<CustomField>
    <fullName>TotalTime__c</fullName>
    <label>TotalTime</label>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>