force-app/main/default/objects/Module__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Modulo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>