force-app/main/default/objects/Module__c/fields/UnitQuantity__c.field-meta.xml
<CustomField>
    <fullName>UnitQuantity__c</fullName>
    <label>UnitQuantity</label>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>